--- a/gb/23/11/10/n14113379.md
+++ b/gb/23/11/10/n14113379.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【未解之谜】马前课（下）红朝国运大变更？！</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14113384-1200x800-1-600x400.jpg" />
-<h6>2029年红朝应劫？！《马前课》预言华夏有圣人救世，一统全球。谁将成为天下共主？（《未解之谜》提供）
-</h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14114234-da2aab61449912b9347c96fc45592f36-600x400.jpg" />///image2=
+<h6></h6>
 <hr>
-<p>大家好，我是扶摇。欢迎和我一起探索<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>。</p>
-<p>上一期我们介绍了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%AF%B8%E8%91%9B%E4%BA%AE.md#1">诸葛亮</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A9%AC%E5%89%8D%E8%AF%BE.md#1">马前课</a>的前10课。马前课总共有14课，都是根据<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%A6%E8%B1%A1.md#1">卦象</a>推演出来的，每一课对应一个朝代。这前10课从三国一直<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A2%84%E8%A8%80.md#1">预言</a>到了民国，准确率100%。今天就来跟大家介绍后面的4课。</p>
+<p>大家好，我是扶摇。欢迎和我一起探索未解之谜。</p>
+<p>上一期我们介绍了诸葛亮马前课的前十课。马前课总共有十四课，都是根据卦象推演出来的，每一课对应一个朝代。这前十课从三国一直预言到了民国，准确率100%。今天就来跟大家介绍后面的四课。</p>
+<p><center><center><a title="YouTube video player" src=""></a><a href="https://d53tcmkdq4r1q.cloudfront.net/B6odZBr2y"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/oRmTRs4ll20" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></center>
 <h2>“突如其来”──中共国</h2>
 <p><strong>第十一课</strong></p>
 <p>四门乍辟　突如其来<br />
 晨鸡一声　其道大衰</p>
-<p>以<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A9%AC%E5%89%8D%E8%AF%BE.md#1">马前课</a>一课对应一个朝代的模式来看，既然第10课讲民国，第十一课<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A2%84%E8%A8%80.md#1">预言</a>的应该就是中共国了。那么是不是这样呢？</p>
+<p>以马前课一课对应一个朝代的模式来看，既然第十课讲民国，第十一课预言的应该就是中共国了。那么是不是这样呢？</p>
 <p>先来看“四门乍辟”这四个字，最后这个“辟”字有“开”的意思。大家知道古代建城讲究四四方方，东南西北各有一个城门。来看一下“共产党”的“共”字，是不是很像四方城门都打开的样子呢？</p>
 <p>再来看第二句“突如其来”。有一种解读认为，当年抗战胜利后，共产党仅用了短短4年的时间就夺取了政权，可不就是“突如其来”嘛。当然，也有人认为对应的是改革开放。你看中国一夜之间就打开了国门，全面开放，那不就是“四门乍辟 突如其来”？</p>
 <p>不过也有精通易经的朋友说，哪有那么简单。你去查查字典，“突如其来”这四个来自哪里？《易经》！</p>
-<p>刚才说了，这14课都是根据<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%A6%E8%B1%A1.md#1">卦象</a>推算出来的。而十一课对应的是“离”卦。八卦每个卦都有六个爻。《易经》中对“离”卦的三爻“九四”是这样解读的：“突如其来如，焚如，死如，弃如”，“突如其来，如无所容也。”</p>
+<p>刚才说了，这十四课都是根据卦象推算出来的。而十一课对应的是“离”卦。八卦每个卦都有六个爻。《易经》中对“离”卦的三爻“九四”是这样解读的：“突如其来如，焚如，死如，弃如”，“突如其来，如无所容也。”</p>
 <p>具体是什么意思呢？我们在一些易学网站上找到的解读是这样的：</p>
 <p>“离”为火。而“九四”这一爻是离卦中火势最旺盛、最偏激的一爻，像是突然而来的一场大火灾，让一切化为乌有，一片死灰。虽然爻辞没有“凶”字，但极凶之至。</p>
 <p>东汉学者郑玄认为，“焚如，死如，弃如”是三种十分厉害的刑罚。“焚如，杀其亲之刑。死如，杀人之刑也。弃如，流宥之刑。”这里“流宥”指的是流放。每一种都是置人于死地的刑罚。</p>
@@ -24,33 +24,35 @@
 <p>所以“突如其来”这四个字如果对应的是国运的话，这个朝代的政权怕是得来不那么正当，对百姓也不会十分友好，弄不好会有一些悲惨的事情发生。</p>
 <p>那么这样的朝代会长久吗？</p>
 <h2>晨鸡一声</h2>
-<p>来看下两句：“晨鸡一声　其道大衰”。</p>
+<p>来看下两句：“晨鸡一声　其道大衰。”</p>
 <p>有网友解读说，这只鸡不就是鸡年嘛。进入千禧年后有两个鸡年，2005年和2017年。咱们来看看这两年都发生了啥影响国运的大事。</p>
-<p>先来看2005年。这一年有那么一件事，说大不大，说小不小，就是退党运动开始了。这场从海外发起的运动一直延续到了今天，已经有超过4亿人参加了。发起人说，大家都退出了，共产党就不存在了。党不存在了，那党建立的政权不就瓦解了吗？那党领导下的中共国是不是从05年开始就“其道大衰”了呀？</p>
+<p>先来看2005年。这一年有那么一件事，说大不大，说小不小，就是退党运动开始了。这场从海外发起的运动一直延续到了今天，已经有超过四亿人参加了。发起人说，大家都退出了，共产党就不存在了。党不存在了，那党建立的政权不就瓦解了吗？那党领导下的中共国是不是从05年开始就“其道大衰”了呀？</p>
 <p>也有人说，或许是对应在2017年。这一年发生了什么大事呀？习一尊连任了，打好算盘要当皇帝，不准备再下去了。这预言中说“晨鸡一声”，为什么是晨鸡不是暮鸡或别的什么鸡呢？晨鸡一声天下白呀。这鸡有翅膀，翅膀再加个“白”字，不就是个“习”字嘛。这是不是说，等一尊连任当皇帝后，国运开始衰了呀？</p>
-<p>不过这话可能很多人都不爱听。有朋友就说了，你们瞎猜啥呢，你看这6年过去了，习一尊这位置不坐得稳稳的嘛。下一个鸡年什么时候？2029年，咱们到时候再看。</p>
+<p>不过这话可能很多人都不爱听。有朋友就说了，你们瞎猜啥呢，你看这六年过去了，习一尊这位置不坐得稳稳的嘛。下一个鸡年什么时候？2029年，咱们到时候再看。</p>
+</p>
+<p><center><a title="2024龙年大戏？《马前课》最后4课：红朝运终、应劫、其道大衰；新朝来临，圣人拯患救难，光耀中华！｜ #未解之谜 扶摇" src="https://www.ganjingworld.com/zh-TW/embed/1g9pl0rkpft2v1Ardoxbb5sgY1ts1c" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <h2>黑兔走入青龙穴</h2>
-<p>当然了，这些也都只是网上流传的众多解读中的一种。也有网友说，咱们得结合其它预言一起来看，兼听则明嘛。你看《推背图》第43象有说“黑兔走入青龙穴 欲尽不尽不可说”。这第43象我们之前也介绍过，一般认为，是预言两岸统一的。“ 欲尽不尽不可说”这一句和“其道大衰”意思差不多，基本上是指国运受到严重打击，可能从此一蹶不振。那会在什么时候呢？如果这里的黑兔和青龙都是指年份的话，就近来看，可能就对应在2023和2024这两年。</p>
-<p>回过头来再来看《马前课》，这“晨鸡一声”里的“晨”字也可以看成是“辰”，也就是龙。那跟推背图43象是不是对应上了？习皇帝登基之后的某个龙年，或许就在2024年，国运开始大衰了？</p>
+<p>当然了，这些也都只是网上流传的众多解读中的一种。也有网友说，咱们得结合其它预言一起来看，兼听则明嘛。你看《推背图》第四十三象有说“黑兔走入青龙穴 欲尽不尽不可说”。这第四十三象我们之前也介绍过，一般认为，是预言两岸统一的。“ 欲尽不尽不可说”这一句和“其道大衰”意思差不多，基本上是指国运受到严重打击，可能从此一蹶不振。那会在什么时候呢？如果这里的黑兔和青龙都是指年份的话，就近来看，可能就对应在2023和2024这两年。</p>
+<p>回过头来再来看《马前课》，这“晨鸡一声”里的“晨”字也可以看成是“辰”，也就是龙。那跟推背图四十三象是不是对应上了？习皇帝登基之后的某个龙年，或许就在2024年，国运开始大衰了？</p>
 <p>说到这儿您可能会说，这些网友真是脑洞大开，想像力丰富。不过预言就是这样，在还没有成为现实之前，你怎么解读都行。不管怎样，下一个龙年2024年就在跟前了，下一个鸡年2029年也不远了，大家搬个小板凳坐好，看看都会发生些什么吧。</p>
 <h2>圣人临朝</h2>
-<p>这个世界没有铁打的江山，假设某一天当朝运终，新的朝代开始了。那会是怎样的朝代呢？来看第12课。</p>
+<p>这个世界没有铁打的江山，假设某一天当朝运终，新的朝代开始了。那会是怎样的朝代呢？来看第十二课。</p>
 <p><strong>第十二课</strong></p>
 <p>拯患救难　是唯圣人<br />
 阳复而治　晦极生明</p>
-<p>这第十二课的卦象是解卦。易经中说，解卦是以积极行动让自己化险为夷的一卦。就是说，危险来临了，人必须自己积极主动做点什么才能解除危险。（《序卦》：“物不可以终难，故受之以解，解者缓也。”） 而解卦也有罪刑被赦免的意思，所以如果有犯错的人，遇解卦也可得到赦免或原谅。 结合12课的后两句“阳复而治　晦极生明”，基本上可以推断出新王朝建立之前，会出现一个非常黑暗， 困难的时期。 不过大家熬过这一段之后，就会是个光明的未来，一个宽厚的王朝， 不秋后算账，不计大家过往的错处。</p>
-<p>那么这个新王朝是谁建立的呢？依马前课的预言模式，一般第二句对应的会是开国皇帝的姓氏或是特征。例如第八课讲大明，第二句“其色若赤”对应的是朱元璋的“朱”字。第九句是大清，第二句“古月为君”，“古月”这两个字就点出了个“胡”字，满清对大明来讲那就是“胡人”了。第十课是民国，民国没有皇帝啦，第二句“千人一口”就是民主共和的“和”字。而在预言未来新王朝第十二课中，这第二句就非常直白，说是一位“圣人”──“拯患救难是唯圣人”。</p>
-<p>有趣的是，在我们之前介绍过的几个预言中，不约而同地都提到了将来中国会出现一位“圣人”。像是《推背图》第44象中就有说“中国而今有圣人，虽非豪杰也周成”，把圣人比作西周的一代明君周成王。《五公经》中也有说“圣人登位非常善”。认为会有一位“圣人”将来会登上王位。</p>
+<p>这第十二课的卦象是解卦。易经中说，解卦是以积极行动让自己化险为夷的一卦。就是说，危险来临了，人必须自己积极主动做点什么才能解除危险。（《序卦》：“物不可以终难，故受之以解，解者缓也。”） 而解卦也有罪刑被赦免的意思，所以如果有犯错的人，遇解卦也可得到赦免或原谅。 结合十二课的后两句“阳复而治 晦极生明”，基本上可以推断出新王朝建立之前，会出现一个非常黑暗， 困难的时期。 不过大家熬过这一段之后，就会是个光明的未来，一个宽厚的王朝， 不秋后算账，不计大家过往的错处。</p>
+<p>那么这个新王朝是谁建立的呢？依马前课的预言模式，一般第二句对应的会是开国皇帝的姓氏或是特征。例如第八课讲大明，第二句“其色若赤”对应的是朱元璋的“朱”字。第九句是大清，第二句“古月为君”，“古月”这两个字就点出了个“胡”字，满清对大明来讲那就是“胡人”了。第十课是民国，民国没有皇帝啦，第二句“千人一口”就是民主共和的“和”字。而在预言未来新王朝第十二课中，这第二句就非常直白，说是一位“圣人”——“拯患救难是唯圣人”。</p>
+<p>有趣的是，在我们之前介绍过的几个预言中，不约而同地都提到了将来中国会出现一位“圣人”。像是《推背图》第四十四象中就有说“中国而今有圣人，虽非豪杰也周成”，把圣人比作西周的一代明君周成王。《五公经》中也有说“圣人登位非常善”。认为会有一位“圣人”将来会登上王位。</p>
 <p>说起“圣人”，大家都不陌生。这不，有孔圣人嘛，还有当年指点过孔夫子的老子。不过这两位“圣人”都没管理过国家。 老子讲究“无为而治”，而孔子到了晚年的时候就憧憬起“大同世界”来了。</p>
 <h2>大同世界</h2>
 <p>“大同”这个概念最早是出自于《礼记》（《礼记·礼运·大同》）。那时孔子和弟子言偃聊天，说如果社会能实践“大道”，就能在贤能之士领导下，人人讲求信用、追求和睦，互助互爱，也不追求个人财富，社会因此不会出现阴谋诡计，偷窃还有战乱的现象。孔子说，这样的理想世界称为“大同”。依照这个标准，似乎也只有遥远的三皇五帝时代才能有“大同世界”的出现了。</p>
 <p>无独有偶，跟孔子几乎同一个时代的希腊大哲学家柏拉图也描述过跟大同世界很像的一个“黄金时代”。希腊神话中把人类世纪分为五个时代，黄金时代是第一个时代，之后就逐渐堕落，经历白银、青铜、英雄和黑铁时代。咱们现是在黑铁时代。</p>
 <p>柏拉图笔下的黄金时代中，人类跟神生活在一起。他们不需要为了养活自己而努力工作，因为土地会自己长出食物。他们能以年轻的外表度过漫长的岁月。神对他们非常仁慈，让他们远离疾病，并守护着他们。当死亡最终来临的时候，他们也会安详离世。死后他们的灵魂会变成精灵环绕着土地。</p>
-<p>怎么样，您是不是也想生活在这样的时代呢？如果咱们说的这些预言真能灵验的话，说不定您还真有这个福分。来看马前课的第13课。</p>
+<p>怎么样，您是不是也想生活在这样的时代呢？如果咱们说的这些预言真能灵验的话，说不定您还真有这个福分。来看马前课的第<strong>十三</strong>课。</p>
 <p><strong>第十三课</strong></p>
 <p>贤不遗野　天下一家<br />
 无名无德　光耀中华</p>
-<p>这里的重点是什么？“天下一家”──“大同”了呀。 如果这第13课看上去还有点模糊的话，来看《推背图》的第59象就非常清楚了。《推背图》第59象的谶言中也有同样一句话，就是“天下一家”，不过更多的解释还在颂言中。</p>
+<p>这里的重点是什么？“天下一家”——“大同”了呀。 如果这第<strong>十三</strong>课看上去还有点模糊的话，来看《推背图》的第59象就非常清楚了。《推背图》第59象的谶言中也有同样一句话，就是“天下一家”，不过更多的解释还在颂言中。</p>
 <p>第五十九象<br />
 谶曰<br />
 无城无府 无尔无我<br />
@@ -60,12 +62,11 @@
 红黄黑白不分明<br />
 东南西北尽和睦</p>
 <p>“一人为大”就是个“大”字。“手持签筒拔去竹”是个字谜，“筒”字去“竹”是什么字呢？不难猜，“同”字。合在一起是什么呢？“大同”呀。而且“红黄黑白”四个肤色都点出来了，“东南西北尽和睦”那可不是“天下一家”，世界大同了吗？</p>
-<p>那么传说中的世界末日不会应验了吗？好像还真是那样。来看最后一课，第14课。</p>
+<p>那么传说中的世界末日不会应验了吗？好像还真是那样。来看最后一课，第<strong>十四</strong>课。</p>
 <p><strong>第十四课</strong></p>
 <p>占得此课　易数乃终<br />
 前古后今　其道无穷</p>
-<p>这一课对应的是未济这一卦，也是周易64卦中的最后一卦，所以说“易数乃终”。<br />
-不过“易数”推演完了，历史还在继续。易经中说，以未济作为终结代表这不是一个实质性的结束，而是另一个循环的开始。天道循环，无始无终。（《序卦》：“物不可穷也，故受之以未济终。”）。所以后两句说：“前古后今　其道无穷”。从古到今，历史会变迁，朝代会更替，但“道”是没有穷尽的。</p>
+<p>这一课对应的是未济这一卦，也是周易64卦中的最后一卦，所以说“易数乃终”。不过“易数”推演完了，历史还在继续。易经中说，以未济作为终结代表这不是一个实质性的结束，而是另一个循环的开始。天道循环，无始无终。（《序卦》：“物不可穷也，故受之以未济终。”）所以后两句说：“前古后今　其道无穷。”从古到今，历史会变迁，朝代会更替，但“道”是没有穷尽的。</p>
 <p>同样是以八卦推演的《推背图》最后一象也是同样的说法：</p>
 <p>推背图60象</p>
 <p>谶曰<br />
@@ -81,43 +82,47 @@
 <p>易经中说：“一阴一阳之谓道”，所以这谶言中的“一阴一阳”指的应该就是“道”。道“无始无终”，是永远长存，永远不变的。而后两句“终者自终 始者自始”则是更为直白地表达了这种理念：一段历史的结束，是另一个循环的开始。</p>
 <p>其实不只中国的预言，国外的许多预言也都指向了同一种说法，就是在经过一些大的灾难后，人类将会有个全新的开始，这个世界不会走向末日。我们之前介绍过的玛雅预言说是经过一个净化与更新的时期后，人类将进入一个新的纪元。西方大预言家诺查丹马斯也说过，人类会打败敌基督，这个世界将迎来光明的未来。所以您是有可能进入“大同世界”，享受未来新世界的。</p>
 <p>好了，今天的故事就讲到这里了。给大家留个家庭作业吧：孔子讲到的大同世界中的“大道”，还有马前课中讲到的无始无终，没有穷尽“道”到底会是什么呢？您觉得该怎么理解呢？</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>，我是扶摇。我们下回见。</p>
-<p>订阅YouTube频道：<ahref="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
+<p>未解之谜，我是扶摇。我们下回见。</p>
+<p>订阅YouTube频道：<ahref=""></a><a href="https://d53tcmkdq4r1q.cloudfront.net/B6odZBr2y"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">"></a><a href="https://d53tcmkdq4r1q.cloudfront.net/B6odZBr2y"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
 订阅频道Ganjingworld频道：<ahref="https://www.ganjing.com/zh-TW/channel/1eiqjdnq7go2dgb6zFtQ9TYK11080c">https://www.ganjing.com/zh-TW/channel/1eiqjdnq7go2dgb6zFtQ9TYK11080c</a><br />
 订阅未解之谜Telegram群组：<ahref="https://t.me/wjzmchannel">https://t.me/wjzmchannel</a></p>
 <p>《未解之谜》节目组制作</p>
-<p>责任编辑：李梅</p>
+<p>责任编辑：李梅#</p>
+<hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099163.md#1">【未解之谜】以色列的第三圣殿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105634.md#1">【未解之谜】君王都怕的“赤马红羊”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14108863.md#1">【未解之谜】谁是中国新天子？</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/20/n14099163.md#1">【未解之谜】以色列的第三圣殿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/30/n14105634.md#1">【未解之谜】君王都怕的“赤马红羊”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/3/n14108863.md#1">【未解之谜】谁是中国新天子？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/6/n14110441.md#1">【未解之谜】全中！预言中国国运的马前课（上）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/22/n14230977.md#1">【未解之谜】精准预言 易经大师曾仕强泄漏的天机：这些年分很关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/1/n14215650.md#1">【未解之谜】2024最新预言 红朝要变天？！</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/2/n10185925.md#1" target="_blank">名为开放实为开抢的邓小平理论 (下)</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/12/8/n11708865.md#1" target="_blank">香港立法会议员胡志伟：很佩服法轮功学员</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/10/n10774701.md#1" target="_blank">推倒这堵墙——里根总统的柏林墙演讲</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14109270.md#1">专家：《蒋中正日记》是罕见国家领导人日记</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110798.md#1">一年养生就从立冬起 补肾养藏精气</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/3/n14109344.md#1">六岁时的乔治?华盛顿没有砍樱桃树吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110441.md#1">【未解之谜】全中！预言中国国运的马前课（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102372.md#1">【古道人生】富翁为何招来“杀妻之罪”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14112935.md#1">【中国禁闻】太子党突然聚集北京 引猜疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14112929.md#1">【环球直击】共和党第三场辩论 聚焦中共及以哈冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14113125.md#1">【新闻五人行】逼元老吐钱？中南海风暴将至</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112239.md#1">网传李克强女儿照：葬礼上拒与中共高官对视握手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112357.md#1">范畴生前撰文：李克强之死是“阳谋”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112156.md#1">习亲自要求过紧日子 专家：问题异常严重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/7/n14111721.md#1">好莱坞女星裘莉批以色列 遭影帝父亲乔恩反驳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112331.md#1">49岁八点档台剧女星兵家绮罹癌 预计下月手术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112406.md#1">当年为何缺席林心如婚礼？苏有朋曝原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14111772.md#1">梁朝伟夸刘嘉玲全能 曝当年婚礼由妻一手包办</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112462.md#1">郑欣宜正式复出幕前 圆润体态现身好友MV</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14107124.md#1">亚马逊美容护肤品大促销 优惠精选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/7/n14111344.md#1">如何从睡姿看个性？ 专家教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105395.md#1">五味子降压护肝抗衰老 服用有禁忌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112405.md#1">铁锅料理更健康美味 4步让铁锅变不沾锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112122.md#1">闹钟响了按下贪睡按钮 可能对身体有害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276851.md#1">【杨延昭传奇】杨延昭威震三关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276161.md#1">【古道人生】商人只重利？义气干霄的商人在这里</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282483.md#1">【时事金扫描】哈马斯曝大量火箭弹来自中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282647.md#1">【中国禁闻】法总统府下令驱逐中共国安负责人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283119.md#1">【马克时空】环太军演着眼实战 击沉两栖突击舰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281682.md#1">浙大女生申请赴美留学消息意外火爆 网民热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281736.md#1">美军机重返二战“噩梦”战场 剑指中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281880.md#1">中国经济低迷 年轻人开始“报复性存钱”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281648.md#1">那英感染带状疱疹 以半边脸妆容亮相《歌手》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282430.md#1">郑爽未履行金额超1亿 剧集出品方股权被冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281700.md#1">何韵诗网上音乐会两度中断 因港警到场查身份</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281327.md#1">专家：在游轮上吃自助餐 盘子不能重复盛菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281392.md#1">14天旅游只需带一个背包 打包行李8秘诀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281364.md#1">到英国旅游数周 美国女子谈“文化冲击”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14281917.md#1">为什么棉质衣物洗了会缩水？ 如何抢救？</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/10/n14113379.htm">【未解之谜】马前课（下）红朝国运大变更？！</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113379.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/11/10/n14113379.htm">【未解之谜】马前课（下）红朝国运大变更？！</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/10/n14113379.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
